Fix link alignment

--- a/assets/sass/_info.scss
+++ b/assets/sass/_info.scss
@@ -31,6 +31,7 @@
     #links {
         img {
             height: 16px;
+            width: 16px;
         }
     }
 }
